# core/domain/review.entity.go
@@ -9,6 +9,7 @@ import (
 
 type Review struct {
 	ID          uuid.UUID      `gorm:"type:uuid;primaryKey;default:gen_random_uuid()" json:"id"`
+	ProposalID  uuid.UUID      `gorm:"type:uuid;not null;index:idx_reviews_proposal_id" json:"proposal_id"`
 	BusinessID  uuid.UUID      `gorm:"type:uuid;not null;index:idx_reviews_business_id" json:"business_id"`
 	HelperID    uuid.UUID      `gorm:"type:uuid;not null;index:idx_reviews_helper_id" json:"helper_id"`
 	CategoryID  uint           `gorm:"not null" json:"category_id"`
