# core/domain/review.request.dto.go
@@ -1,8 +1,9 @@
 package domain
 
 type CreateReviewRequestDTO struct {
-	HelperID    string `json:"helper_id" validate:"required,uuid"`
-	Rate        int    `json:"rate" validate:"required,min=1,max=5"`
-	Review      string `json:"review" validate:"required"`
-	ServiceType string `json:"service_type" validate:"required"`
+	ProposalID  string `json:"proposal_id" binding:"required,uuid"`
+	HelperID    string `json:"helper_id" binding:"required,uuid"`
+	Rate        int    `json:"rate" binding:"required,min=1,max=5"`
+	Review      string `json:"review" binding:"required"`
+	ServiceType string `json:"service_type" binding:"required"`
 }
