# docs/swagger.json
@@ -1706,12 +1706,16 @@
             "type": "object",
             "required": [
                 "helper_id",
+                "proposal_id",
                 "rate",
                 "review",
                 "service_type"
             ],
             "properties": {
                 "helper_id": {
+                    "type": "string"
+                },
+                "proposal_id": {
                     "type": "string"
                 },
                 "rate": {
